[package]
name = "secureops-intel"
description = "Signed IOC feed load/verify, fuzzy typosquat matching, and tree-sitter AST skill scanning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
strsim = "0.11"                      # Jaro-Winkler typosquat scoring (Part D)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
minisign-verify = "0.2"              # detached signature verify (B.8)
tree-sitter = "0.22"                 # AST skill scan (Part D)
tree-sitter-javascript = "0.21"     # JS/TS grammar

[dev-dependencies]
tempfile = "3"
