[package]
name = "secureops-monitors"
description = "SecureOps runtime monitors: tokio monitor loops, AlertBus, SQLite persistence, cost circuit breaker."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core = { workspace = true }
secureops-intel = { path = "../secureops-intel", version = "0.0.2" }   # hash_string + IOC matchers (skill scanner)
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }                            # dangerous-skill + prompt-injection patterns
time = { workspace = true, features = ["parsing"] }     # parse entry timestamps for cost windows

# Pinned to keep libsqlite3-sys at 0.30.0: 0.30.1 requires cc >=1.1.6, which
# conflicts with tree-sitter-javascript's `cc <1.1` cap (secureops-intel). 0.30.0
# accepts cc ^1.0. The libsqlite3-sys pin is the real lever (rusqlite 0.32.0
# allows ^0.30.0 and the resolver otherwise greedily takes 0.30.1); rusqlite is
# pinned to the matching 0.32.0. All versions current/unyanked.
rusqlite = { version = "=0.32.0", features = ["bundled"] }   # SQLite: alerts + audit-log tables
libsqlite3-sys = "=0.30.0"                                   # version pin only (rusqlite drives features)

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
