[package]
name = "secureops-napi"
description = "SecureOps N-API addon surface: plain Rust audit entrypoints the napi-derive wrappers expose to the TS shim (Ring 1)."
version.workspace = true
edition.workspace = true
rust-version = "1.77"   # napi-build requires cargo:: syntax added in 1.77
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# Ring 1 in-process engine (PRODUCT.md A.2 / Part G Phase 1). Built as a Node
# native addon (`cdylib`) for the thin TS shim, and as an `rlib` so the standalone
# `clap` binary and tests can call the same entrypoints without the node toolchain.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
secureops-core = { workspace = true }
# Sibling scaffolds reached via path: the addon assembles the real tokio::fs
# AuditContext (secureops-fs) and the Check registry (secureops-checks),
# then drives secureops_core::run_audit.
secureops-checks = { path = "../secureops-checks", version = "0.0.2" }
secureops-fs = { path = "../secureops-fs", version = "0.0.2" }
secureops-intel = { path = "../secureops-intel", version = "0.0.2" }   # bundled IOC db for the audit path
secureops-harden = { path = "../secureops-harden", version = "0.0.2" } # harden command
secureops-monitors = { path = "../secureops-monitors", version = "0.0.2" } # skill-scan + cost-report commands
serde_json = { workspace = true }

napi = { version = "3", default-features = false, features = ["napi6", "async", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
