[package]
name = "secureops-sandbox"
description = "SecureOps execution PEP: a wasmtime host that grants WASI capabilities only as the PDP permits, with fuel + epoch caps (PRODUCT.md B.7)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core = { workspace = true }
secureops-policy = { path = "../secureops-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

wasmtime = { version = "27", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = "27"

[dev-dependencies]
tokio = { workspace = true }
wat = "1"   # WAT → WASM bytecode for sandbox tests

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
