[package]
name = "secureops-scanner"
description = "SecureOps scanner worker (PRODUCT.md Phase 5b). Consumes scan jobs from the Redis SCAN_QUEUE, runs the configured collectors, and writes Findings into the platform Store. Includes a mock collector for CI and a feature-gated AWS read-only collector."
version.workspace = true
edition.workspace = true
rust-version = "1.82"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "secureops-scanner"
path = "src/main.rs"

[dependencies]
secureops-api = { path = "../secureops-api", version = "0.0.1" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
deadpool-redis = "0.18"
async-trait = { workspace = true }
