[package]
name = "secureops-scanner"
description = "SecureOps scanner worker (PRODUCT.md Phase 5b). Consumes scan jobs from the Redis SCAN_QUEUE, runs the configured collectors, and writes Findings into the platform Store. Includes a mock collector for CI and a feature-gated AWS read-only collector."
version.workspace = true
edition.workspace = true
rust-version = "1.82"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "secureops-scanner"
path = "src/main.rs"

[dependencies]
secureops-api = { path = "../secureops-api", version = "0.0.2" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
deadpool-redis = "0.18"
async-trait = { workspace = true }
# Read-only AWS collector (gated). aws-sdk v1 pulls aws-lc-rs (cc>=1.1) -
# usable since the tree-sitter bump lifted the workspace cc cap.
aws-config = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-sdk-s3 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-ec2 = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-iam = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudtrail = { version = "1", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }

[features]
aws = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-ec2",
    "dep:aws-sdk-iam",
    "dep:aws-sdk-cloudtrail",
]
