[package]
name = "secureops-tokenbudget"
description = "SecureOps LLM context packing (PRODUCT.md §10/Phase 6): relevance/cost knapsack + cosine-dedup, schema-ref, diff-delta, map-reduce compression."
version.workspace = true
edition.workspace = true
# Platform tier (matches secureops-api MSRV).
rust-version = "1.82"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pack"
harness = false
